# TOSS

./: .env.example  .gitignore  README.md  README.zh-CN.md  docker-compose.yml
.github/workflows/: ci.yml
apps/web/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json
apps/web/app/: layout.tsx  page.tsx  styles.css
apps/web/components/: EditorPane.tsx
apps/web/lib/: api.ts  dev-auth.ts  realtime.ts  typst.ts  typst.worker.ts
apps/web/scripts/: git-multiuser-test.sh  headless-collab-git.mjs  headless-full-user-journey.mjs  headless-smoke.mjs  realtime-multiuser-test.mjs
apps/web/src/: App.tsx  styles.css
backend/: Cargo.toml  Dockerfile  tests.http
backend/migrations/: 202603220003_oidc_and_git_server.sql  202603230001_v11_static_spa_monolith.sql  202603230002_local_auth_and_revisions.sql  202603230003_project_assets_inline_data.sql  202603230004_share_links_and_site_name.sql  202603230005_org_memberships_public_access_and_share_links.sql  202603230006_project_owner_and_archived.sql  202603230007_project_archive_per_user.sql  202603240001_revision_full_snapshot.sql  202603240002_revision_diff_storage.sql  202603240003_project_templates_and_thumbnails.sql  202603240004_realtime_durable_log.sql  202603240005_project_sync_queue.sql  202603250001_revision_completeness.sql  202603250002_users_username.sql  202603310001_anonymous_share_mode.sql  202603310002_permission_model_simplify.sql  202604010001_projects_org_nullable.sql  202604010002_auth_announcement.sql  202604030001_project_types_latex.sql
backend/src/: authz.rs  git_utils.rs  latex_cache.rs  main.rs  realtime.rs  server.rs  types.rs  typst_cache.rs
backend/src/server/: auth.rs  authn.rs  documents.rs  git.rs  mod.rs  projects.rs  routes.rs  support.rs
backend/src/services/: mod.rs  support.rs
docs/: API.md  ARCHITECTURE.md  GIT_1TO1_HISTORY_REDESIGN_TRACKER.md  SYNC_REVIEW_AND_REDESIGN.md
scripts/: backup-minio.sh  backup-postgres.sh  bootstrap-admin.sh  ci-checks.sh  e2e-git-policy.sh  smoke-test.sh
services/core-api/: Cargo.toml  Dockerfile  tests.http
services/core-api/migrations/: 202603220001_init.sql  202603220002_git_repositories.sql  202603220004_personal_access_tokens.sql  202603220005_oidc_group_role_mapping.sql  202603220006_object_storage_artifacts.sql
services/core-api/src/: authz.rs  git_utils.rs  main.rs  object_storage.rs  realtime.rs  server.rs  types.rs  typst_cache.rs
services/realtime/: Cargo.toml  Dockerfile  tests.http
services/realtime/src/: main.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/: sw.js
web/public/swiftlatex/: texlyredvipdfm.js  texlyrepdftex.js  texlyrexetex.js
web/scripts/: git-multiuser-test.sh  git-nonoverlap-merge-test.sh  headless-collab-git.mjs  headless-full-project-load-regression.mjs  headless-large-project-performance.mjs  headless-preview-position-restore.mjs  headless-revision-collab-regression.mjs  headless-revision-panel.mjs  headless-share-redeem.mjs  headless-smoke.mjs  headless-sync-cache-regression.mjs  realtime-multiuser-test.mjs  revision-diff-stress.mjs  stress-crdt-git-revision.mjs  stress-realtime-isolation.mjs  sync-typst-assets.mjs
web/src/: App.tsx  main.tsx  styles.css
web/src/components/: AuthForm.tsx  EditorPane.tsx  HistoryPanel.tsx  PresenceBar.tsx  ui.tsx
web/src/lib/: api.ts  i18n.ts  latex.ts  latex.worker.ts  pdf.ts  projectCache.ts  realtime.ts  typst.ts  typst.worker.ts
(+39 files in other folders)
